Fix EU-166